tests/ui/parser/macro/macro-expand-to-field-2.stderr
error: expected `:`, found `!`
  --> $DIR/macro-expand-to-field-2.rs:11:14
   |
LL |         field!(oopsies:()),
   |              ^ expected `:`
   |
   = note: macros cannot expand to struct fields

error: expected `,`, or `}`, found `(`
  --> $DIR/macro-expand-to-field-2.rs:11:15
   |
LL |     Named {
   |     ----- while parsing this struct
LL |         field!(oopsies:()),
   |               ^

error: aborting due to 2 previous errors

